Improve scan screen

--- a/Smart-Scavenger-Hunt-iOS/Smart-Scavenger-Hunt-iOS/Base.lproj/Main.storyboard
+++ b/Smart-Scavenger-Hunt-iOS/Smart-Scavenger-Hunt-iOS/Base.lproj/Main.storyboard
@@ -111,17 +111,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Identifiant" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zc6-V6-S9Z">
-                                <rect key="frame" x="16" y="589" width="343" height="21"/>
+                                <rect key="frame" x="149.5" y="589" width="76.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VYq-V9-Oeu">
+                                <rect key="frame" x="16" y="584" width="129.5" height="30"/>
+                                <state key="normal" title="Beacon"/>
+                                <connections>
+                                    <action selector="SearchBeacon:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bOV-FL-WeG"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y7p-EA-gmj">
+                                <rect key="frame" x="234" y="584" width="129.5" height="30"/>
+                                <state key="normal" title="QR Code"/>
+                                <connections>
+                                    <action selector="searchQRCode:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ECw-L2-uo3"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.6953135161674906" green="0.75047562235149912" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.80948514277188421" green="1" blue="0.79931686826306891" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zc6-V6-S9Z" secondAttribute="trailing" constant="16" id="iHo-Fc-67I"/>
+                            <constraint firstItem="VYq-V9-Oeu" firstAttribute="centerY" secondItem="zc6-V6-S9Z" secondAttribute="centerY" id="71M-ze-Eqo"/>
+                            <constraint firstItem="zc6-V6-S9Z" firstAttribute="leading" secondItem="VYq-V9-Oeu" secondAttribute="trailing" constant="4" id="8VY-7F-ksJ"/>
+                            <constraint firstItem="Y7p-EA-gmj" firstAttribute="leading" secondItem="zc6-V6-S9Z" secondAttribute="trailing" constant="8" id="ABq-4U-nAa"/>
+                            <constraint firstItem="Y7p-EA-gmj" firstAttribute="centerY" secondItem="zc6-V6-S9Z" secondAttribute="centerY" id="XJC-DE-YA7"/>
+                            <constraint firstItem="zc6-V6-S9Z" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fvR-Xu-1ft"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="zc6-V6-S9Z" secondAttribute="bottom" constant="8" id="jMX-NQ-dVi"/>
-                            <constraint firstItem="zc6-V6-S9Z" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="qdh-Vi-gxh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Y7p-EA-gmj" secondAttribute="trailing" constant="11.5" id="ktL-Rv-p5E"/>
+                            <constraint firstItem="VYq-V9-Oeu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="mNR-0K-pkp"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
